--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -30,19 +30,21 @@
       <div class="login_wrapper">
         <div class="animate form login_form">
           <section class="login_content">
-            <form>
+            <form th:action="@{/login}" method="post">
+  <!--<input name="userid" type="hidden" th:value="${user.id}">-->
               <h1>登录</h1>
+              <span th:value="${error}"></span>
               <div>
-                <input type="text" class="form-control" placeholder="用户名" required="" />
+                <input name="userCode" type="text" class="form-control" placeholder="用户名" required="" />
               </div>
               <div>
-                <input type="password" class="form-control" placeholder="密码" required="" />
+                <input name="password" type="password" class="form-control" placeholder="密码" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="index.html">登录</a>
-                <a class="reset_pass" href="#">忘记密码?</a>
-              </div>
+            <input type="submit" value="登录">
 
+              </div>
+            </form>
               <div class="clearfix"></div>
 
               <div class="separator">
@@ -56,45 +58,11 @@
                  
                 </div>
               </div>
-            </form>
+
           </section>
         </div>
 
-        <div id="register" class="animate form registration_form">
-          <section class="login_content">
-            <form>
-              <h1>Create Account</h1>
-              <div>
-                <input type="text" class="form-control" placeholder="Username" required="" />
-              </div>
-              <div>
-                <input type="email" class="form-control" placeholder="Email" required="" />
-              </div>
-              <div>
-                <input type="password" class="form-control" placeholder="Password" required="" />
-              </div>
-              <div>
-                <a class="btn btn-default submit" href="index.html">Submit</a>
-              </div>
 
-              <div class="clearfix"></div>
-
-              <div class="separator">
-                <p class="change_link">Already a member ?
-                  <a href="#signin" class="to_register"> Log in </a>
-                </p>
-
-                <div class="clearfix"></div>
-                <br />
-
-                <div>
-                  <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                  <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
-                </div>
-              </div>
-            </form>
-          </section>
-        </div>
       </div>
     </div>
   </body>
